--- a/res/main.css
+++ b/res/main.css
@@ -12,17 +12,17 @@ html, body {
     padding: 0;
     border: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 body { 
     font-family: 'Arial', sans-serif;
     font-size: 15px;
     height: 100%;
-    padding: 0px 3px;
+    padding: 0;
 }
 
 #main-wrap {
-    background : #FFFFFF url('img/bg-dots.png') top left repeat-x;
     margin: 0px auto;
     padding: 0px;
     height: 100%;
@@ -33,10 +33,10 @@ body {
     background-position: 0px -155px !important;
 }
 
-#main {
+#header-container {
     width: 720px;
     margin: 0px auto;
-    padding: 15px;
+    padding: 0 15px 15px;
 }
 
 label {
@@ -110,76 +110,6 @@ label {
     box-sizing: content-box;
 }
 
-#search-options-container {
-    margin: 0px auto;
-    width : 610px;
-    text-align: left;
-    position: relative;
-    font-size: 13px;
-}
-
-#search-options-container .search-option {
-    background-color: #E5E5E5;
-    border: none;
-    font-size: 13px;
-    font-family: 'Arial', sans-serif;
-    padding: 3px 7px;
-    margin: 0px;
-    margin-right: 3px;
-    color: #803300;
-    border-radius : 0px 0px 5px 5px;
-    -moz-border-radius : 0px 0px 5px 5px;
-    -webkit-border-radius : 0px 0px 5px 5px;
-    box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    -ms-box-sizing: content-box; 
-    box-sizing: content-box;   
-    height: 23px;
-    vertical-align: top;
-    -webkit-transition: all .1s ease-in;
-    -moz-transition: all .1s ease-in;
-    -o-transition: all .1s ease-in;
-    transition: all .1s ease-in;
-}
-
-#search-options-container .search-option:hover {
-    background-color: #CCCCCC;
-}
-
-#search-checkboxes {
-    background-color: #E5E5E5;
-    border: none;
-    font-size: 13px;
-    font-family: 'Arial', sans-serif;
-    padding: 3px 7px;
-    margin: 0px;
-    margin-right: 3px;
-    color: #803300;
-    border-radius : 0px 0px 5px 5px;
-    -moz-border-radius : 0px 0px 5px 5px;
-    -webkit-border-radius : 0px 0px 5px 5px;
-    height: 23px;
-    vertical-align: top;
-    display: none;
-}
-
-#search-help-box {
-    margin: 0px auto;
-    width : 590px;
-    text-align: left;
-    position: relative;
-    font-size: 13px;
-    padding: 10px;
-    border: 1px solid #BBBBBB;
-    margin-top: 5px;
-    display: none;
-    background-color: #fff9d7;
-    box-shadow : 1px 2px 5px #CCCCCC;
-    -moz-box-shadow : 1px 2px 5px #CCCCCC;
-    -webkit-box-shadow : 1px 2px 5px #CCCCCC;
-}
-
 /* Search result page */
 
 #srp-search-form #search-form-container input {
@@ -226,8 +156,42 @@ label {
     padding-left: 15px;
 }
 
+#progress-container {
+    background: #FFFFFF url('img/input-bg.png') 0px 0px repeat-x;
+    border-radius: 6px;
+    border: 1px solid #AAAAAA;
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    width: 517px;
+    top: 10px;
+}
+
+#progress-container .loading-text {
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 6px;
+    color: #999;
+    width: 510px;
+}
+
+#progress {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 30px;
+}
+
+#body-container {
+    height: calc(100vh - 90px);
+    /*background-color: red;*/
+    overflow: auto;
+    position: absolute;
+    top: 90px;
+}
+
+
 #srp-header {
-    border-bottom: 1px dashed #CCCCCC;
     padding: 10px;
     margin-top: -30px;
 }
@@ -366,7 +330,6 @@ label {
 
 #header {
     padding: 20px 10px;
-    border-bottom: 1px dashed #CCCCCC;
     margin-bottom: 30px;
     position: relative;
 }
@@ -392,8 +355,6 @@ label {
 	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
 	background-color:#ededed;
 	-webkit-border-top-left-radius:4px;
 	-moz-border-radius-topleft:4px;
@@ -415,10 +376,10 @@ label {
 }
 .graybtn:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
 	background-color:#dfdfdf;
-}.graybtn:active {
+}
+
+.graybtn:active {
 	position:relative;
 	top:1px;
 }
